--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 body{
     background-color: aquamarine;
 }
+
+scd{
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
