--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body{
     background-color: aquamarine;
 }
 
+h1{
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 72px;
+    color: darkred;
+
+}
+
 scd{
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
