--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1{
 
 }
 
-scd{
+.scd{
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
