--- a/style.css
+++ b/style.css
@@ -17,3 +17,18 @@ h1{
     font-family: 'Roboto Mono', monospace;
 }
 
+
+
+.begin{
+    text-align: center;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 64px;
+}
+
+h3{
+
+    text-align: center;
+    font-size: 72px;
+    font-family: 'Roboto Mono', monospace;
+}
+
