--- a/style.css
+++ b/style.css
@@ -32,3 +32,8 @@ h3{
     font-family: 'Roboto Mono', monospace;
 }
 
+.Reflection{
+    font-size: 12px;
+    font-family: 'Roboto Mono', monospace;
+}
+
